--- a/fastcalc/fastcalc/FastCalc/MainViewController.xib
+++ b/fastcalc/fastcalc/FastCalc/MainViewController.xib
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
-		<int key="IBDocument.SystemTarget">1296</int>
-		<string key="IBDocument.SystemVersion">11E53</string>
-		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
-		<string key="IBDocument.AppKitVersion">1138.47</string>
-		<string key="IBDocument.HIToolboxVersion">569.00</string>
+		<int key="IBDocument.SystemTarget">1280</int>
+		<string key="IBDocument.SystemVersion">11D50d</string>
+		<string key="IBDocument.InterfaceBuilderVersion">1934</string>
+		<string key="IBDocument.AppKitVersion">1138.32</string>
+		<string key="IBDocument.HIToolboxVersion">568.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">1181</string>
+			<string key="NS.object.0">931</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBUISwipeGestureRecognizer</string>
@@ -126,7 +126,7 @@
 									<object class="IBUITableView" id="658427827">
 										<reference key="NSNextResponder" ref="696399524"/>
 										<int key="NSvFlags">292</int>
-										<string key="NSFrame">{{0, 5}, {288, 356}}</string>
+										<string key="NSFrame">{{0, 55}, {288, 306}}</string>
 										<reference key="NSSuperview" ref="696399524"/>
 										<reference key="NSWindow"/>
 										<reference key="NSNextKeyView" ref="267428017"/>
@@ -144,6 +144,71 @@
 										<float key="IBUIRowHeight">44</float>
 										<float key="IBUISectionHeaderHeight">22</float>
 										<float key="IBUISectionFooterHeight">22</float>
+									</object>
+									<object class="IBUIView" id="257178424">
+										<reference key="NSNextResponder" ref="696399524"/>
+										<int key="NSvFlags">292</int>
+										<array class="NSMutableArray" key="NSSubviews">
+											<object class="IBUIImageView" id="1018294338">
+												<reference key="NSNextResponder" ref="257178424"/>
+												<int key="NSvFlags">256</int>
+												<string key="NSFrame">{{0, -10}, {288, 14}}</string>
+												<reference key="NSSuperview" ref="257178424"/>
+												<reference key="NSWindow"/>
+												<reference key="NSNextKeyView" ref="89655368"/>
+												<bool key="IBUIOpaque">NO</bool>
+												<bool key="IBUIClipsSubviews">YES</bool>
+												<int key="IBUIContentMode">4</int>
+												<bool key="IBUIMultipleTouchEnabled">YES</bool>
+												<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+												<object class="NSCustomResource" key="IBUIImage" id="326477978">
+													<string key="NSClassName">NSImage</string>
+													<string key="NSResourceName">paper_top.png</string>
+												</object>
+											</object>
+											<object class="IBUILabel" id="89655368">
+												<reference key="NSNextResponder" ref="257178424"/>
+												<int key="NSvFlags">292</int>
+												<string key="NSFrame">{{0, 14}, {288, 42}}</string>
+												<reference key="NSSuperview" ref="257178424"/>
+												<reference key="NSWindow"/>
+												<reference key="NSNextKeyView" ref="658427827"/>
+												<string key="NSReuseIdentifierKey">_NS:328</string>
+												<bool key="IBUIOpaque">NO</bool>
+												<bool key="IBUIClipsSubviews">YES</bool>
+												<int key="IBUIContentMode">7</int>
+												<bool key="IBUIUserInteractionEnabled">NO</bool>
+												<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
+												<string key="IBUIText">Спасибо за покупку</string>
+												<object class="NSColor" key="IBUITextColor" id="591932573">
+													<int key="NSColorSpace">1</int>
+													<bytes key="NSRGB">MCAwIDAAA</bytes>
+												</object>
+												<nil key="IBUIHighlightedColor"/>
+												<int key="IBUIBaselineAdjustment">1</int>
+												<float key="IBUIMinimumFontSize">10</float>
+												<int key="IBUITextAlignment">1</int>
+												<object class="IBUIFontDescription" key="IBUIFontDescription" id="811686124">
+													<int key="type">1</int>
+													<double key="pointSize">17</double>
+												</object>
+												<object class="NSFont" key="IBUIFont" id="459247538">
+													<string key="NSName">Helvetica</string>
+													<double key="NSSize">17</double>
+													<int key="NSfFlags">16</int>
+												</object>
+											</object>
+										</array>
+										<string key="NSFrameSize">{288, 56}</string>
+										<reference key="NSSuperview" ref="696399524"/>
+										<reference key="NSWindow"/>
+										<reference key="NSNextKeyView" ref="1018294338"/>
+										<string key="NSReuseIdentifierKey">_NS:196</string>
+										<object class="NSColor" key="IBUIBackgroundColor">
+											<int key="NSColorSpace">3</int>
+											<bytes key="NSWhite">MC42NjY2NjY2NjY3AA</bytes>
+										</object>
+										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 									</object>
 									<object class="IBUIView" id="267428017">
 										<reference key="NSNextResponder" ref="696399524"/>
@@ -163,10 +228,7 @@
 												<bool key="IBUIUserInteractionEnabled">NO</bool>
 												<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 												<string key="IBUIText">      Итого :</string>
-												<object class="NSColor" key="IBUITextColor" id="591932573">
-													<int key="NSColorSpace">1</int>
-													<bytes key="NSRGB">MCAwIDAAA</bytes>
-												</object>
+												<reference key="IBUITextColor" ref="591932573"/>
 												<nil key="IBUIHighlightedColor"/>
 												<int key="IBUIBaselineAdjustment">0</int>
 												<float key="IBUIMinimumFontSize">10</float>
@@ -198,15 +260,8 @@
 												<nil key="IBUIHighlightedColor"/>
 												<int key="IBUIBaselineAdjustment">1</int>
 												<float key="IBUIMinimumFontSize">10</float>
-												<object class="IBUIFontDescription" key="IBUIFontDescription">
-													<int key="type">1</int>
-													<double key="pointSize">17</double>
-												</object>
-												<object class="NSFont" key="IBUIFont">
-													<string key="NSName">Helvetica</string>
-													<double key="NSSize">17</double>
-													<int key="NSfFlags">16</int>
-												</object>
+												<reference key="IBUIFontDescription" ref="811686124"/>
+												<reference key="IBUIFont" ref="459247538"/>
 											</object>
 											<object class="IBUIImageView" id="578683265">
 												<reference key="NSNextResponder" ref="267428017"/>
@@ -238,28 +293,11 @@
 										</object>
 										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 									</object>
-									<object class="IBUIImageView" id="1018294338">
-										<reference key="NSNextResponder" ref="696399524"/>
-										<int key="NSvFlags">256</int>
-										<string key="NSFrame">{{0, -9}, {288, 14}}</string>
-										<reference key="NSSuperview" ref="696399524"/>
-										<reference key="NSWindow"/>
-										<reference key="NSNextKeyView" ref="658427827"/>
-										<bool key="IBUIOpaque">NO</bool>
-										<bool key="IBUIClipsSubviews">YES</bool>
-										<int key="IBUIContentMode">4</int>
-										<bool key="IBUIMultipleTouchEnabled">YES</bool>
-										<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-										<object class="NSCustomResource" key="IBUIImage" id="326477978">
-											<string key="NSClassName">NSImage</string>
-											<string key="NSResourceName">paper_top.png</string>
-										</object>
-									</object>
 								</array>
 								<string key="NSFrameSize">{288, 416}</string>
 								<reference key="NSSuperview" ref="461678569"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="1018294338"/>
+								<reference key="NSNextKeyView" ref="257178424"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<reference key="IBUIBackgroundColor" ref="62128074"/>
 								<bool key="IBUIOpaque">NO</bool>
@@ -599,6 +637,14 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">mThanksView</string>
+						<reference key="source" ref="372490531"/>
+						<reference key="destination" ref="257178424"/>
+					</object>
+					<int key="connectionID">86</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
 						<string key="label">dataSource</string>
 						<reference key="source" ref="326047165"/>
 						<reference key="destination" ref="965269376"/>
@@ -829,7 +875,7 @@
 						<array class="NSMutableArray" key="children">
 							<reference ref="658427827"/>
 							<reference ref="267428017"/>
-							<reference ref="1018294338"/>
+							<reference ref="257178424"/>
 						</array>
 						<reference key="parent" ref="461678569"/>
 						<string key="objectName">Price View</string>
@@ -869,11 +915,6 @@
 						<reference key="parent" ref="191373211"/>
 					</object>
 					<object class="IBObjectRecord">
-						<int key="objectID">67</int>
-						<reference key="object" ref="1018294338"/>
-						<reference key="parent" ref="696399524"/>
-					</object>
-					<object class="IBObjectRecord">
 						<int key="objectID">68</int>
 						<reference key="object" ref="560746229"/>
 						<reference key="parent" ref="191373211"/>
@@ -903,6 +944,25 @@
 						<int key="objectID">78</int>
 						<reference key="object" ref="158805250"/>
 						<reference key="parent" ref="191373211"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">84</int>
+						<reference key="object" ref="257178424"/>
+						<array class="NSMutableArray" key="children">
+							<reference ref="1018294338"/>
+							<reference ref="89655368"/>
+						</array>
+						<reference key="parent" ref="696399524"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">67</int>
+						<reference key="object" ref="1018294338"/>
+						<reference key="parent" ref="257178424"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">85</int>
+						<reference key="object" ref="89655368"/>
+						<reference key="parent" ref="257178424"/>
 					</object>
 				</array>
 			</object>
@@ -941,12 +1001,14 @@
 				<string key="73.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<real value="1" key="73.IBUIButtonInspectorSelectedStateConfigurationMetadataKey"/>
 				<string key="78.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="84.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+				<string key="85.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			</dictionary>
 			<dictionary class="NSMutableDictionary" key="unlocalizedProperties"/>
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">83</int>
+			<int key="maxID">86</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -992,6 +1054,7 @@
 						<string key="mPriceLbl">UILabel</string>
 						<string key="mPriceMask">UIImageView</string>
 						<string key="mPriceView">UIView</string>
+						<string key="mThanksView">UIView</string>
 						<string key="mTotalLbl">UILabel</string>
 						<string key="menuTableViewController">MenuTableViewController</string>
 						<string key="priceTableViewController">PriceTableViewController</string>
@@ -1051,6 +1114,10 @@
 						</object>
 						<object class="IBToOneOutletInfo" key="mPriceView">
 							<string key="name">mPriceView</string>
+							<string key="candidateClassName">UIView</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="mThanksView">
+							<string key="name">mThanksView</string>
 							<string key="candidateClassName">UIView</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="mTotalLbl">
@@ -1136,7 +1203,7 @@
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaTouchPlugin.iPhoneOS</string>
-			<real value="1296" key="NS.object.0"/>
+			<real value="1280" key="NS.object.0"/>
 		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
@@ -1152,6 +1219,6 @@
 			<string key="paper_top.png">{288, 14}</string>
 			<string key="table_mask.png">{296, 275}</string>
 		</dictionary>
-		<string key="IBCocoaTouchPluginVersion">1181</string>
+		<string key="IBCocoaTouchPluginVersion">931</string>
 	</data>
 </archive>
